--- a/style.css
+++ b/style.css
@@ -76,17 +76,17 @@ img.language {
   height: 1em;
 }
 
-#buttons button {
+button {
   color: #fff;
   background-color: #333;
 }
 
-#buttons button:hover {
+button:hover {
   color: #000;
   background-color: #00aeff62;
 }
 
-#buttons button:active {
+button:active {
   color: #000;
   background-color: #00aeff;
 }
@@ -110,7 +110,8 @@ img.language {
   grid-template-areas: "flag"
                        "english_country_info"
                        "dutch_country_info"
-                       "italian_country_info";   
+                       "italian_country_info"
+                       "show-all";   
   grid-auto-columns: 1fr;    
   grid-auto-rows: min-content;
   gap: 0.5rem;              
@@ -125,9 +126,10 @@ img.language {
 
   #results .country-panel {
     grid-template-areas: 
-      "flag english_country_info"
-      "flag dutch_country_info"
-      "flag italian_country_info";   
+      "show-all show-all"
+      "flag     english_country_info"
+      "flag     dutch_country_info"
+      "flag     italian_country_info";   
     grid-auto-columns: 1fr 2fr;    
     grid-auto-rows: min-content min-content min-content;
     gap: 1rem;              
@@ -156,6 +158,19 @@ img.language {
   grid-area: italian_country_info;
 }
 
+#show-all {
+  grid-area: show-all;
+  
+  justify-self: center;
+  align-self: center;
+
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #333;
+  outline: none;  
+}
+
 #results .country-info {
   font-size: 80%;
   font-family: 'Roboto Mono', monospace;
@@ -182,8 +197,28 @@ img.language {
 
 }
 
-#results .country {
+#results #flag {
+  visibility: visible;
+}
 
+#results.hide-flag #flag {
+  visibility: hidden;
+}
+
+#results .capital {
+  visibility: visible;
+}
+
+#results.hide-capital-name .capital {
+  visibility: hidden;
+}
+
+#results .country {
+  visibility: visible;
+}
+
+#results.hide-country-name .country {
+  visibility: hidden;
 }
 
 #results .capital {
