--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   color: white;
   padding: 1rem;
   text-align: center;
+  max-width: 100vw;
 
   display: grid;
   grid-template-columns: 1fr;
@@ -41,14 +42,46 @@ body {
 #buttons {
   background-color: #ababab;
   color: white;
-  padding: 20px;
+  padding: 1rem;
   text-align: center;
+  max-width: 100vw;
 
-  display: grid;
-  grid-template-columns: repeat(5, max-content);
-  column-gap: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 0.5rem;
   justify-content: center;
   align-items: center;
+}
+
+/* Styles for larger screens */
+@media (min-width: 400px) {
+  .initial-mode #buttons {
+    display: grid;
+    grid-template-columns: repeat(3, min-content);
+    justify-content: center;
+    align-items: center;    
+  }
+
+  #buttons .separator {
+    visibility: hidden;
+  }
+}
+
+@media (min-width: 500px) {
+  .initial-mode #buttons {
+    grid-template-columns: repeat(5, max-content);
+  }
+
+  #buttons .separator {
+    visibility: visible;
+  }
+}
+
+@media (min-width: 600px) {
+  #buttons {
+    grid-template-columns: repeat(5, max-content);
+  }
 }
 
 #search input, #buttons button {
@@ -63,11 +96,6 @@ body {
   background-color: #ccc;
   width: 80%;
   height: 2em;
-}
-
-/* Styles for larger screens */
-@media (min-width: 600px) {
-  
 }
 
 #search input:focus {
