--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 /* Styles for the search section */
 #search {
-  background-color: #00aeff;
+  background-color: #ff009d;
   color: white;
   padding: 1rem;
   text-align: center;
