Improved UI: search and random-pick are now all in the search area, while the quiz area is reserved for the quiz UI elements

--- a/style.css
+++ b/style.css
@@ -31,12 +31,42 @@ body {
   max-width: 100vw;
 
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-areas: "intro intro intro intro"
+                       "input go    sep   random";
+  grid-template-columns: 1fr min-content min-content min-content;
   grid-template-rows: min-content min-content;
   justify-content: center;
   justify-items: center;
-  align-items: stretch;
-  row-gap: 0.5rem;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+#search #title {
+  grid-area: intro;
+}
+
+#search #input {
+  grid-area: input;
+}
+
+#search #search-country {
+  grid-area: go;
+}
+
+#search .separator {
+  grid-area: sep;
+}
+
+#search #random-country {
+  grid-area: random;
+}
+
+
+@media (min-width: 500px) {
+  #search {
+    padding-left: 5em;
+    padding-right: 5em;
+  }
 }
 
 #buttons {
@@ -84,21 +114,21 @@ body {
   }
 }
 
-#search input, #buttons button {
-  padding: 10px;
-  font-size: 16px;
+input, button {
+  padding: 0.25em;
+  font-size: 1.25rem;
   border-radius: 5px;
   border: 1px solid #333;
   outline: none;
 }
 
-#search input[type='text'] {
+input[type='text'] {
   background-color: #ccc;
-  width: 80%;
+  width: 100%;
   height: 2em;
 }
 
-#search input:focus {
+input:focus {
   background-color: #fff;
   border-color: #000;
 }
@@ -119,8 +149,8 @@ button {
 }
 
 button:hover {
-  color: #000;
-  background-color: #00aeff62;
+  color: #333;
+  background-color: #fff;
 }
 
 button:active {
