--- a/style.css
+++ b/style.css
@@ -30,11 +30,8 @@ body {
   text-align: center;
   max-width: 100vw;
 
-  display: grid;
-  grid-template-areas: "intro intro intro intro"
-                       "input go    sep   random";
-  grid-template-columns: 1fr min-content min-content min-content;
-  grid-template-rows: min-content min-content;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   justify-items: center;
   align-items: center;
@@ -222,32 +219,25 @@ button:active {
   padding: 20px;
   max-width: 100vw;
 
-  display: grid;
-  grid-auto-columns: max-content;
-  justify-items: stretch;
-  justify-content: center;
-  align-content: start;
-  align-items: stretch;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
   gap: 0.25rem;
+
+  padding-bottom: 5em;
 }
  
 #results .country-panel {
-  display: grid;
-  grid-template-areas: "flag"
-                       "english_country_info"
-                       "dutch_country_info"
-                       "italian_country_info";   
-  grid-auto-columns: 1fr;    
-  grid-auto-rows: min-content;
-  gap: 0.5rem;              
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  gap: 0.25rem;              
 }
 
 /* Styles for larger screens */
 @media (min-width: 600px) {
-  #results {
-    padding: 20px;
-    gap: 0.25rem;
-  }
 
   #results .country-panel {
     grid-template-areas: 
@@ -286,6 +276,8 @@ button:active {
   font-size: 80%;
   font-family: 'Roboto Mono', monospace;
   white-space: wrap;
+  max-width: 100%;
+  overflow: hidden;
 
   padding: 0.25rem 1rem;
   display: flex;
@@ -308,7 +300,7 @@ button:active {
   visibility: visible;
 }
 
-.hide-flag #flag {
+.hide-flag #results #flag {
   visibility: hidden;
 }
 
